// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Flag renders correctly 1`] = `
<img
  alt="ru"
  src="mock_image"
/>
`;

exports[`components/Flag should pass className and style to underlying component 1`] = `
<img
  alt="ru"
  className="test-image"
  src="mock_image"
  style={
    Object {
      "marginTop": 4,
    }
  }
/>
`;
